2008-06-30  Alberto Garcia  <agarcia@igalia.com>

	* src/controller.h
	* src/controller.c (controller_run_app)
	* src/main.c (main): Move creation of main window from main() to
	controller_run_app()

2008-06-30  Alberto Garcia  <agarcia@igalia.com>

	* po/lv.po: Updated Latvian translation (by Pēteris Caune)

	* po/it.po: Updated Italian translation (by Andrea Grandi)

2008-06-30  Alberto Garcia  <agarcia@igalia.com>

	* po/de.po, po/es.po, po/fi.po, po/fr.po, po/gl.po, po/it.po
	* po/lv.po, po/pt.po, po/pt_BR.po, po/vagalume.pot: Update
	translation files

2008-06-27  Alberto Garcia  <agarcia@igalia.com>

	* scripts/vagalumectl: Check for dbus-send

	* debian/control: Add build dependency on libdbus-glib-1-dev and
	recommend dbus.

	* src/vgl-bookmark-window.c (vgl_bookmark_window_init): Enable
	searching in the treeview.

	* src/vgl-bookmark-mgr.h
	* src/vgl-bookmark-mgr.c
	(vgl_bookmark_mgr_reorder):
	New function to reorder items in the bookmark list.
	(vgl_bookmark_mgr_find_bookmark_node, vgl_bookmark_compare):
	Use g_list_find_custom() to find bookmarks.
	(vgl_bookmark_mgr_get_instance): Move static bookmark_mgr variable
	here and clear it using a weak pointer.
	(vgl_bookmark_mgr_load_from_disk): Check version number of
	bookmark file.
	(vgl_bookmark_mgr_save_to_disk): Store revision number of bookmark
	file.

	* src/vgl-bookmark-window.c
	(vgl_bookmark_window_init)
	(vgl_bookmark_window_finalize):	Disconnect signal handlers using
	their ID.
	(drag_end_cb): Reorder items in the bookmark manager after a drag
	and drop.

2008-06-26  Alberto Garcia  <agarcia@igalia.com>

	* src/vgl-bookmark-window.c (vgl_bookmark_window_new): Set a
	default height.

2008-06-25  Alberto Garcia  <agarcia@igalia.com>

	* src/vgl-bookmark-mgr.c (vgl_bookmark_mgr_save_to_disk): Add
	version number to the XML file.

	* src/vgl-bookmark-window.c
	(vgl_bookmark_window_show):
	Move the static bookmark_window variable to
	vgl_bookmark_window_show() and clear it using a weak pointer.